# papercut

./: Cargo.toml  Cargo.toml-orig  NOTES.md
shaders/: geometry.wgsl  renderer.wgsl  shape_shader.wgsl  sprite_shader.wgsl
src/: editor.rs  main.rs  renderer.rs  renderer.rs-orig  texture.rs
