[package]
name = "papercut"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
winit = "0.26"
wgpu = "0.13"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
bytemuck = { version = "1.4", features = ["derive"] }
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
] }
